[package]
name = "prstate"
version = "0.1.0"
authors = ["m3y <masozawa@pay2.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
serde-query = "0.1.3"
exitcode = "1.1.2"
anyhow = "1.0.33"
clap = "3.0.0-beta.2"
