[package]
name = "async_trait"
version = "0.1.0"
authors = ["m3y <ma3ya.ozw+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
async-std = { version = "1.6.1", features = ["attributes"] }
