[package]
name = "runtime"
version = "0.1.0"
authors = ["m3y <ma3ya.ozw+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
async-std = { version = "1.6.1", features = ["attributes"] }
