[package]
name = "sample"
version = "0.1.0"
authors = ["m3y <ma3ya.ozw+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.1"

#[patch.crates-io]
##uuid = {path = "../uuid"}
#uuid = {git = "https://github.com/m3y/uuid.git"}
